--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html>
 	<title>Generation XYZ</title>
 	<head>
+		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+ (function(b, o, i, l, e, r) {
+ b.GoogleAnalyticsObject = l;
+ b[l] || (b[l] =
+  function() {
+ (b[l].q = b[l].q || []).push(arguments)
+  });
+ b[l].l = +new Date;
+  e = o.createElement(i);
+ r = o.getElementsByTagName(i)[0];
+ e.src = '//www.google-analytics.com/analytics.js';
+ r.parentNode.insertBefore(e, r)
+ }(window, document, 'script', 'ga'));
+ ga('create', 'UA-6029148-1', 'auto');
+ ga('send', 'pageview');
+ </script> 
+
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/XYZ.css">
 		<link rel="shortcut icon" href="img/yrcircle.png">
