favicon and copy update

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<title>Generation XYZ</title>
 	<head>
+	<link rel="icon" type="image/png" href="img/yrcircle.png">
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
  (function(b, o, i, l, e, r) {
@@ -61,7 +62,7 @@
 				<br>
 			</div>
 			<div class="col-lg-2 col-12 py-2 culture">
-				<a class="a-2" href="XYZ-TOPIC.html#culture"><div id="E" class="circle"></div>
+				<a class="a-2" href="XYZ-TOPIC.html#music"><div id="E" class="circle"></div>
 				<h4 class="pt-4">Music</h4>
 			</a>
 			<br>
