--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>GENXYZ Topic</title>
 		<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+		<link rel="icon" type="image/png" href="img/yrcircle.png">
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
  (function(b, o, i, l, e, r) {
