csv branch compare

--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html>
 	<title>Generation XYZ</title>
 	<head>
+		<link rel="icon" type="image/png" href="img/yrcircle.png">
+		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+		<script>
+		 (function(b, o, i, l, e, r) {
+		 b.GoogleAnalyticsObject = l;
+		 b[l] || (b[l] =
+		  function() {
+		 (b[l].q = b[l].q || []).push(arguments)
+		  });
+		 b[l].l = +new Date;
+		  e = o.createElement(i);
+		 r = o.getElementsByTagName(i)[0];
+		 e.src = '//www.google-analytics.com/analytics.js';
+		 r.parentNode.insertBefore(e, r)
+		 }(window, document, 'script', 'ga'));
+		 ga('create', 'UA-6029148-1', 'auto');
+		 ga('send', 'pageview');
+ 		</script> 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
