edited copy + added social meta tags

--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -2,6 +2,20 @@
 <html>
 	<head>
 		<title>GENXYZ Topic</title>
+		<meta property="og:title" content="Youth Radio's GenXYZ" />
+		<meta property="og:type" content="website" />
+		<meta property="og:description" content="Youth Radio dipped into its archives to bring you stories of teenage life across three generations: X, Y and Z. So grab some headphones and prepare yourself for a nostalgia-filled, trip down memory lane." />
+
+
+		<meta property="og:url" content="" />
+		<meta property="og:image" content="img/GenXYZ_FB.png" />
+
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Youth Radio's GenXYZ" />
+		<meta name="twitter:description" content="Youth Radio dipped into its archives to bring you stories of teenage life across three generations: X, Y and Z. Grab your headphones and listen up! " />
+		<meta name="twitter:image" content="GenXYZ_Twitter.png" />
+		
 		<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 		<link rel="icon" type="image/png" href="img/yrcircle.png">
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
