--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<title>Generation XYZ</title>
 	<head>
+		
 		<link rel="icon" type="image/png" href="img/yrcircle.png">
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 		<script>
@@ -25,6 +26,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="XYZ.css">
 		<link rel="shortcut icon" href="img/yrcircle.png">
+
+		<meta property="og:title" content="Youth Radio's GenXYZ" />
+		<meta property="og:type" content="website" />
+		<meta property="og:description" content="Youth Radio dipped into its archives to bring you stories of teenage life across three generations: X, Y and Z. So grab some headphones and prepare yourself for a nostalgia-filled, trip down memory lane." />
+
+
+		<meta property="og:url" content="" />
+		<meta property="og:image" content="img/GenXYZ_FB.png" />
+
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Youth Radio's GenXYZ" />
+		<meta name="twitter:description" content="Youth Radio dipped into its archives to bring you stories of teenage life across three generations: X, Y and Z. Grab your headphones and listen up! " />
+		<meta name="twitter:image" content="GenXYZ_Twitter.png" />
+
+
 	</head>
 	<body>
 		<div class="container-fluid">
