add link in share meta tag

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<meta property="og:description" content="Youth Radio dipped into its archives to bring you stories of teenage life across three generations: X, Y and Z. So grab some headphones and prepare yourself for a nostalgia-filled, trip down memory lane." />
 
 
-		<meta property="og:url" content="" />
+		<meta property="og:url" content="https://yri.youthradio.org/XYZ/" />
 		<meta property="og:image" content="img/GenXYZ_FB.png" />
 
 
