--- a/XYZ-TOPIC.html
+++ b/XYZ-TOPIC.html
@@ -107,7 +107,7 @@
 					<div class=" my-3">
 					<img id="genXIMG" class="circle" src=""></img></div>
 					
-					<div class="text-center">
+					<div class="text-center story">
 						<a class="mb-2" id="genXLink"><h4 class="" id="genXtitle"></h4>
 						<h6 class="" id="genXauthor"></h6></a>
 					<audio class="mt-3" id="audioX" controls></audio>
@@ -124,7 +124,7 @@
 				<div class=" my-3">
 					<img id="genYIMG" class="circle" src=""></img>
 				</div>
-				<div class="text-center">
+				<div class="text-center story">
 					<a id="genYLink"><h4 id="genYtitle"></h4><h6 class="" id="genYauthor"></h6></a>
 				<audio class="mt-3" id="audioY" controls></audio>
 			</div>
@@ -139,7 +139,7 @@
 			<div class=" my-3">
 				<img id="genZIMG" class="circle" src=""></img>
 			</div>
-			<div class="text-center">
+			<div class="text-center story">
 				<a id="genZLink"><h4 id="genZtitle"></h4><h6 class="" id="genZauthor"></h6></a>
 			<audio class="mt-3" id="audioZ" controls></audio>
 		</div>
