--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Youth Radio's GenXYZ" />
 		<meta name="twitter:description" content="Youth Radio dipped into its archives to bring you stories of teenage life across three generations: X, Y and Z. Grab your headphones and listen up! " />
-		<meta name="twitter:image" content="GenXYZ_Twitter.png" />
+		<meta name="twitter:image" content="https://yri.youthradio.org/XYZ/img/GenXYZ_Twitter.png" />
 
 
 	</head>
